# neural-net

./: .gitignore  CMakeLists.txt  README.Rmd  README.md  neural-net.project  neural-net.workspace  server.xml
cpp/: CMakeLists.txt  grad.s  m  main.cpp  output.s  test.s
cpp/include/: grad.hpp  neuron.hpp  node.cpp
cpp/nn/: main.cpp
cpp/src/: main.cpp
cpp/test/: test.cpp
eigen/src/: main.cpp
micrograd/include/: grad.hpp
micrograd/src/: main
micrograd/test/: test.cpp
nn/: NeuralNetwork.hpp
nnc/: 1  CMakeLists.txt  lhs.c
nnc/src/: main.cpp
python/: Untitled.ipynb  Untitled1.ipynb
python/.ipynb_checkpoints/: demo-checkpoint.ipynb
simd/: CMakeLists.txt
simd/include/: Matrix.cpp  Matrix.hpp  dot.cpp  relu.cpp  scalar.cpp  softmax.cpp
simd/src/: main.cpp  test.cpp
simd/test/: test.cpp
src/: NeuralNetwork.cpp
